# phd

./: .bazelrc  .bettercodehub.yml  .dir-locals.el  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  .travisignore  Adversarial Tuning.ipynb  Adversarial Tuning.py  BUILD  Difftest CLgen Kernels.ipynb  Grammar.ipynb  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  Parser.ipynb  README  README.md  README.rst  README.txt  Sampler Saturation.ipynb  WORKSPACE  abstract.tex  abstract.tex.bak  abstract.txt  acks.tex  acks.tex.bak  acmart.cls  args.json  automate  base.sh  benchmark.BUILD  bibliography.bib  bibliography.tex  build_info.py  build_info_test.py  cache.py  (+84 more)
src/omnitune/: Makefile.am  README.md  client.cc  proxy.py  setup.py  test-client.py
src/omnitune/etc/: org.omnitune.conf
src/omnitune/native/: Makefile.am
src/omnitune/omnitune/: __init__.py  cache.py  db.py  llvm.py  opencl.py  opencl_tim.py  skelcl.py  util.py
src/omnitune/omnitune/skelcl/: __init__.py  dataset.py  db.py  features.py  migrate.py  ml.py  proxy.py  server.py  space.py  training.py  visualise.py
src/omnitune/omnitune/skelcl/data/: best_average_classification_performance.sql  best_average_classification_speedup.sql  best_average_synthetic_real_classification_performance.sql  best_average_synthetic_real_classification_speedup.sql  best_classification_results.sql  best_syn_real_classification_results.sql  create_tables.sql  dump_csvs.sql  empty_tables.sql  export_csvs.sql  insert_runtime_stat.sql  merge_rhs.sql  perf_vs_max_c.sql  perf_vs_max_wgsize.sql  populate_param_stats.sql  select_perf_param.sql  (+3 more)
src/omnitune/tests/: __init__.py  test_cache.py  test_llvm.py  test_opencl.py  test_skelcl.py  test_skelcl_db.py  test_util.py
src/omnitune/tests/data/: ml.db  skelcl.db  skelcl.tiny.db  stencil-gaussian-kernel-ratios.json  stencil-gaussian-kernel-user.cl  stencil-gaussian-kernel.bc  stencil-gaussian-kernel.cl  stencil-gaussian-kernel.ic.json
(+7772 files in other folders)
